--- a/glide.yaml
+++ b/glide.yaml
@@ -1,12 +1,18 @@
 package: github.com/30x/haystack
 import:
 - package: github.com/gorilla/mux
+  version: v1.3.0
 - package: github.com/gorilla/handlers
+  version: v1.2
 - package: github.com/spf13/viper
+  version: 5ed0fc31f7f453625df314d8e66b9791e8d13003
 - package: github.com/tylerb/graceful
+  version: v1.2.13
 - package: github.com/SermoDigital/jose
+  version: 1.1
 - package: cloud.google.com/go
-  version: ^0.6.0
+  version: v0.6.0
+  repo: https://github.com/GoogleCloudPlatform/google-cloud-go
 testImport:
 - package: github.com/onsi/ginkgo
   subpackages:
